--- a/HelloButton/app/src/main/res/values/strings.xml
+++ b/HelloButton/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Hello Button</string>
+    <string name="message_start">Count=0</string>
+    <string name="message_format">Count=%d</string>
+    <string name="increment">+1</string>
+    <string name="reset">Reset</string>
+    <string name="decrement">-1</string>
 </resources>
